--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,15 +5,13 @@ android {
     defaultConfig {
         applicationId "februarybreeze.github.io.smstodingtalk"
         minSdkVersion 19
-        targetSdkVersion 26
+        targetSdkVersion 19
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
 }
@@ -21,9 +19,6 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'com.mcxiaoke.volley:library:1.0.19'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.android.volley:volley:1.1.1'
 }
