--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,6 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
             <intent-filter>
@@ -20,17 +19,15 @@
             </intent-filter>
         </activity>
         <receiver android:name=".SMSListener"
+            android:directBootAware="true"
             android:permission="android.permission.BROADCAST_SMS">
             <intent-filter>
                 <action android:name="android.provider.Telephony.SMS_RECEIVED" />
             </intent-filter>
         </receiver>
         <service android:name=".DingTalkService"
-            android:enabled="true"
-            android:exported="true"
+            android:directBootAware="true"
             android:permission="android.permission.INTERNET" />
-        <service android:name=".MainService" />
-        <service android:name=".FilterService" />
     </application>
 
 </manifest>
